# DataAnalysisGraphs

./: GEMINI.md  LICENSE  README.md  health.py  main.py  pyproject.toml  requirements.txt
first/: analysis.py  specification.md
scripts/: demo_population_calc.py  development_script.py
src/: API.py  Health.ipynb  get_all_data.py  sum_polygons.py
staticData/life-expectancy-vs-health-expenditure/: life-expectancy-vs-health-expenditure.metadata.json  readme.md
