[project]
name = "dataanalysisgraphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "rasterio>=1.4.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
